add jwt middleware for driver-locations service. update swagger docs
